# dimos

./: .gitattributes  .gitignore  .venv  CONTRIBUTING.md  MUJOCO_LOG.TXT  NEWREADME.MD  README.md  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  uv.lock.REMOVED.git-id
.github/workflows/: quickstart-ci.yml  tests.yml
.openclaw/: smart_nav_state.json
autoresearch/: .gitignore  GUIDELINES.md  eval.py  optimizations.py  program.md
dimos/: __init__.py
dimos/agents/: agent.py  constants.py  system_prompt.py  vlm_agent.py  vlm_stream_tester.py
dimos/agents/.ipynb_checkpoints/: cerebras_agent-checkpoint.py
dimos/agents/mcp/: mcp_server.py
dimos/agents/skills/: conftest.py  demo_google_maps_skill.py  demo_gps_nav.py  demo_skill.py  person_follow.py
dimos/agents2/: agent.py  system_prompt.py  test_agent.py  test_agent_fake.py  test_mock_agent.py  testing.py
dimos/agents2/cli/: human.py
dimos/agents2/examples/: webcam_agent.py
dimos/agents2/fixtures/: test_how_much_is_124181112_plus_124124.json  test_what_do_you_see_in_this_picture.json
dimos/agents2/skills/: demo_visual_tracking.py  interpret_map.py  navigation.py  osm.py  test_interpret_map_skill.py  test_navigation.py  visual_tracking.py
dimos/agents2/temp/: run_unitree_agents2.py
dimos/agents_deprecated/modules/: base_agent.py
dimos/control/: hardware_interface.py  orchestrator.py  task.py
dimos/control/blueprints/: __init__.py  basic.py  dual.py  mobile.py  teleop.py
dimos/control/tasks/: __init__.py  teleop_task.py
dimos/control/tuning/: plant_identification.py
dimos/core/: __init__.py  _torch_preload.py  blueprints.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  native_module.py  native_rebuild_perf_test.py  rpc_client.py  shared_memory_transport.py  skill_module.py  stream.py  test_blueprints.py  test_core.py  test_modules.py  test_native_module.py  test_simple_module.py  transport.py  worker.py  worker_manager.py
dimos/core/coordination/: blueprints.py  module_coordinator.py  test_module_coordinator.py
dimos/dashboard/: README.md  module.py  rerun_init.py  rerun_scene_wiring.py  server.py  tf_rerun_module.py
dimos/dashboard/examples/: dask_p1_p2_split_logging.py  (+2 more)
dimos/hardware/: FT_readme.md  calc_calibration_matrix.py  continuous_door_opener.py  force_torque_visualizer.py  ft_min_driver.py  kinpy_kinematics.py  normal_move_test.py  piper_arm.py  so101_arm.py  ufactory.py
dimos/hardware/sensors/lidar/fastlio2/cpp/: CMakeLists.txt  flake.nix  main.cpp
dimos/manipulation/: manipulation_interface.py  manipulation_module.py  pick_and_place_module.py
dimos/mapping/: costmapper.py  test_voxels.py  types.py  voxels.py
dimos/memory/: module.py  stream.py  test_transformer.py  transformer.py  type.py  viz.py
dimos/memory2/: __init__.py  backend.py  conftest.py  intro.md  module.py  store.py  stream.py  test_blobstore_integration.py  test_e2e.py  test_e2e_import.py  test_e2e_query.py  test_embedding.py  test_impl.py  test_module.py  test_save.py  test_store.py  test_stream.py  test_visualizer.py  test_voxel_map.py  todo.md  transform.py  voxel_map.py
dimos/navigation/: cmd_vel_mux.py  dimos_module_entrypoint.sh  entrypoint.sh  rosnav.py  rosnav_docker.py  test_cmd_vel_mux.py
dimos/perception/: manip_aio_pipeline.py  object_detection_stream.py  object_scene_registration.py  object_tracker.py  object_tracker_2d.py  object_tracker_3d.py  spatial_perception.py
dimos/robot/: all_blueprints.py  foxglove_bridge.py  robot.py  test_all_blueprints_generation.py
dimos/simulation/: sim.py  sim_blueprints.py
dimos/spec/: perception.py
dimos/types/: manipulation.py  pose.py
dimos/utils/: data.py  generic.py  logging.py  logging_config.py  monitoring.py  safe_thread_map.py  test_foxglove_bridge.py  test_generic.py  testing.py  thread_utils.py
dimos/vr/: example_usage.py  test_metaquest.py  test_metaquest_subscriber.py
docker/dev/: dev-requirements.txt
docker/navigation/: Dockerfile  MID360_G1_EDU_config.json  README.md  build.sh  docker-compose.yml  start.sh
docs/: hooks.py  index.md
docs/agents/: index.md
docs/api/: visualization.md
docs/concepts/: blueprints.md  transports.md
docs/development/: README.md  depth_camera_integration.md
docs/installation/: nix.md
docs/tutorial/: modules.md
docs/tutorials/: index.md
docs/usage/: README.md  modules.md  transports.md  visualization.md
installer/: Dockerfile  installer.pyz.REMOVED.git-id
installer/build_scripts/: build_docker  build_docker.py  build_pip_dependency_database.py  create_dep_database.py  test
installer/phases/: 00_logo_and_basic_checks.ts  01_all_system_dependencies.ts  04_dimos_check.ts
installer/pyz_app/: __main__.py
plans/: memory.md  memory1.md  memory3.md
scripts/: install.sh  run_inference.py
scripts/r1pro_test/: test_04_arm_joint_command.py
tests/: run_webrtc.py  s0101_control_test.py  test_ibvs.py  test_manipulation_pipeline_visualization.py  test_object_tracking_module.py
tests/.ipynb_checkpoints/: test_cerebras_agent_query-checkpoint.py  test_cerebras_agent_skills-checkpoint.py
(+466 files in other folders)
