[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent OS framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "dimos contributors" }
]
keywords = ["robotics", "agents", "ros", "llm", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
    "reactivex>=4.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
ros = [
    "rclpy",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
dimos = "dimos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 ignored since line-length is already enforced above; W291 for trailing whitespace
# also ignoring SIM108 (ternary operator suggestions) — I find explicit if/else more readable
# also ignoring B007 (unused loop variable) — I use _ inconsistently and don't want the noise
# also ignoring UP007 (use X | Y for union types) — I prefer Optional[X] for clarity
# also ignoring F841 (local variable assigned but never used) — sometimes useful during debugging
ignore = ["E501", "W291", "SIM108", "B007", "UP007", "F841"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# increase default timeout to avoid flaky async tests on slow machines
# bumped from 60 -> 120 since my dev machine is particularly slow
# bumped again to 180 — running inside a VM makes things even slower
timeout = 180
